# Student-Assessment-App

./: README.md
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/agents/: generation_agent.py  scoring_agent.py
backend/api/: student.py  teacher.py  users.py
backend/core/: config.py  schema.sql
backend/services/: database.py  extractor.py
frontend/: index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppLayout.tsx  shared.tsx
frontend/src/components/results/: InsightsPanel.tsx  MCQDetails.tsx  ScoreOverview.tsx  ShortAnswerDetails.tsx
frontend/src/hooks/: use-backend-user-id.ts
frontend/src/lib/: api.ts  user-context.tsx
frontend/src/pages/: Landing.tsx  SelectRole.tsx
frontend/src/pages/student/: StudentDashboard.tsx  StudentResults.tsx  StudentTopicDetail.tsx  StudentTopics.tsx  SubmissionDetail.tsx  TakeAssessment.tsx
frontend/src/pages/teacher/: CreateTopic.tsx  TeacherDashboard.tsx  TeacherTopics.tsx  TopicDetail.tsx
